--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a href="https://github.com/Munanga26" target="_blank">Elsa Nsamba</a> and is
           <a href="https://github.com/Munanga26/myWeatherapp" target="_blank"> on GitHub</a>
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://664102cba80f92fba479b560--sunny-praline-98d030.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
